--- a/refatoracao/refatoracao.csproj
+++ b/refatoracao/refatoracao.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="R14.HideDelegate\depois\" />
+  </ItemGroup>
+
 </Project>
