--- a/refatoracao/refatoracao.csproj
+++ b/refatoracao/refatoracao.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="R15.RemoveMiddleMan\depois\" />
+    <Folder Include="R16.IntroduceForeignMethod\depois\" />
   </ItemGroup>
 
 </Project>
