--- a/refatoracao/refatoracao.csproj
+++ b/refatoracao/refatoracao.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="R07.RemoveAssignmentsToParameters\depois\" />
     <Folder Include="R18.SelfEncapsulateField\antes\" />
     <Folder Include="R33.ConsolidateConditionalExpression\antes\" />
     <Folder Include="R33.ConsolidateConditionalExpression\depois\" />
